refined repository getter function usage