@@ -9,7 +9,7 @@ import Prescription.Repository.PrescriptionRepository;
 import User.Model.User;
 import java.util.List;
 
-import static Util.RepositoryGetter.getDoctorRepository;
+import static Util.RepositoryGetter.*;
 
 public class DoctorActions {
 
@@ -26,13 +26,13 @@ public class DoctorActions {
         return doctor;
     }
 
+
     public static List<MedicalRecord> viewPatientRecord(Doctor doctor){
         if (doctor == null) {
             System.out.println("Doctor cannot be null.");
             return null;
         }
-        MedicalRecordRepository medRepo = MedicalRecordRepository.getInstance("src/Data/MedicalRecord_List.csv");
-        return medRepo.getByFilter((MedicalRecord record) -> record.getDoctorId().equals(doctor.getId()));
+        return getMedicalRecordRepository().getByFilter((MedicalRecord record) -> record.getDoctorId().equals(doctor.getId()));
     }
     public static MedicalRecord viewSpecificPatientRecord(Doctor doctor, String patientId) {
         if (doctor == null || patientId == null) {
@@ -40,15 +40,14 @@ public class DoctorActions {
             return null;
         }
 
-        MedicalRecordRepository medRepo = MedicalRecordRepository.getInstance("src/Data/MedicalRecord_List.csv");
-        List<MedicalRecord> records = medRepo.getByFilter((MedicalRecord record) -> record.getPatientId().equals(patientId) && record.getDoctorId().equals(doctor.getId()));
+        List<MedicalRecord> records = getMedicalRecordRepository().getByFilter((MedicalRecord record) -> record.getPatientId().equals(patientId) && record.getDoctorId().equals(doctor.getId()));
 
         if (records.isEmpty()) {
             System.out.println("No records found for patient with ID: " + patientId + " assigned to doctor with ID: " + doctor.getId());
             return null;
         } else {
             System.out.println("Found record for patient with ID: " + patientId);
-            return records.get(0); // Assuming each patient has one record per doctor
+            return records.getFirst(); // Assuming each patient has one record per doctor
         }
     }   
     public static void addPatientRecord(MedicalRecord record) {
@@ -57,8 +56,7 @@ public class DoctorActions {
             return;
         }
 
-        MedicalRecordRepository repo = MedicalRecordRepository.getInstance("src/Data/MedicalRecord_List.csv");
-        MedicalRecord added = repo.create(record);
+        MedicalRecord added = getMedicalRecordRepository().create(record);
 
         if (added != null) {
             System.out.println("New medical record added successfully for patient with ID: " + record.getPatientId());
@@ -72,15 +70,14 @@ public class DoctorActions {
             System.out.println("Medical record cannot be null.");
             return;
         }
-        MedicalRecordRepository repo = MedicalRecordRepository.getInstance("src/Data/MedicalRecord_List.csv");
-        repo.update(entity);
+        getMedicalRecordRepository().update(entity);
     }
     public static void generatePrescription(Prescription prescription) {
         if (prescription == null) {
             System.out.println("Prescription cannot be null.");
             return;
         }
-        PrescriptionRepository prescriptionRepo = PrescriptionRepository.getInstance("src/Data/Prescription_List.csv");
+        PrescriptionRepository prescriptionRepo = getPrescriptionRepository();
         prescriptionRepo.update(prescription); //insert id of the prescription
     }
 
@@ -90,8 +87,7 @@ public class DoctorActions {
             return null;
         }
 
-        PrescriptionRepository prescriptionRepo = PrescriptionRepository.getInstance("src/Data/Prescription_List.csv");
-        List<Prescription> prescriptions = prescriptionRepo.getByFilter(prescription -> prescription.getDoctorId().equals(doctor.getId()));
+        List<Prescription> prescriptions = getPrescriptionRepository().getByFilter(prescription -> prescription.getDoctorId().equals(doctor.getId()));
 
         if (prescriptions.isEmpty()) {
             System.out.println("No prescriptions found for doctor with ID: " + doctor.getId());
@@ -107,12 +103,11 @@ public class DoctorActions {
             return;
         }
 
-        PrescriptionRepository prescriptionRepo = PrescriptionRepository.getInstance("src/Data/Prescription_List.csv");
-        Prescription prescription = prescriptionRepo.read(prescriptionId);
+        Prescription prescription = getPrescriptionRepository().read(prescriptionId);
 
         if (prescription != null) {
             prescription.setStatus(newStatus);
-            prescriptionRepo.update(prescription);
+            getPrescriptionRepository().update(prescription);
             System.out.println("Prescription status updated to: " + newStatus);
         } else {
             System.out.println("Prescription with ID " + prescriptionId + " not found.");
